[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "volsense"
version = "1.0.0"
description = "A modular framework for volatility forecasting using deep learning and GARCH models"
authors = [{name="Your Name"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "numpy>=1.23",
    "pandas>=1.5",
    "arch>=5.4",
    "tqdm",
]

[project.scripts]
volsense-train = "volsense_core.cli.train_model:main"
volsense-forecast = "volsense_inference.cli.forecast:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["volsense_core*", "volsense_inference*"]